account_service/deploy/account-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: account-service
  labels:
    app: account-service
    service: account-service
spec:
  ports:
    - port: 8018
      name: account-service-port
      appProtocol: grpc
  selector:
    app: account-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service
  labels:
    app: account-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: account-service
  template:
    metadata:
      labels:
        app: account-service
    spec:
      containers:
        - name: account-service
          image: account-service:v2
          imagePullPolicy: Never
          ports:
            - containerPort: 8018
          volumeMounts:
            - name: config
              mountPath: /service/conf
      volumes:
        - name: config
          configMap:
            name: account-service-config
