account_service/deploy/account-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: account-service-vs
spec:
  hosts:
    - "account-service"
  http:
    - route:
        - destination:
            host: account-service
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: account-service-dr
spec:
  host: account-service
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
